# Neural-Superstatistics

./: .gitignore  LICENSE  README.md  environment.yaml  setup.cfg
applications/coal_mining/: configuration.py  custom_network.py  data.py  experiments.py  likelihoods.py  models.py  priors.py
applications/coal_mining/notebooks/: bayesloop_benchmark.ipynb
applications/coal_mining/posterior_samples/: bl_post_means.npy  bl_post_stds.npy
applications/lexical_decision/: priors.py
applications/lexical_decision/data/: data_lexical_decision.csv  parameters_full_ddm_error_coding_cs.lst
applications/lexical_decision/notebooks/: full_gpddm.ipynb  full_rwddm.ipynb  mmd.ipynb  sbc.ipynb
applications/lexical_decision/src/: context.py  helpers.py  macro_models.py  micro_models.py  networks.py  plot_funs.py  priors.py  transformations.py
applications/optimal_policy/: configuration.py  experiments.py  likelihoods.py  models.py  priors.py
applications/optimal_policy/data/: data_preprocessing.R  optimal_policy_data.csv
applications/optimal_policy/notebook/: optimal_policy_experiment.ipynb
applications/simulation_study/: configuration.py  experiments.py
applications/simulation_study/data/: random_walk_ddm_sim_200.pkl  regime_switching_ddm_sim_200.pkl  static_ddm_sim_200.pkl  stationary_ddm_sim_200.pkl
applications/simulation_study/notebook/: simulation_study_experiment.ipynb
applications/stan_comparison/: configuration.py  experiments.py  likelihoods.py  models.py  priors.py
assets/diffusion/: likelihoods.py  models.py  priors.py
(+115 files in other folders)
